# trait-winnower

./: .gitignore  Cargo.toml  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
src/: analysis.rs  cli.rs  config.rs  discover.rs  error.rs  info.rs  lib.rs  main.rs  removable.rs  target.rs
src/dynamic_analysis/: common.rs  edit.rs  mod.rs
src/static_analysis/: ir.rs  mod.rs
tests/: cli.rs  resolve_tests.rs  trait_sandbox_tests.rs
tests/expected/trait_sandbox/src/: a.rs  b.rs  c.rs  lib.rs  traits.rs
tests/test_files/trait_sandbox/: Cargo.toml
tests/test_files/trait_sandbox/src/: a.rs  b.rs  c.rs  lib.rs  traits.rs
