[package]
name = "trait-winnower"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
anyhow = "1.0.99"
ignore = "0.4.23"
serde = { version = "1.0.225", features = ["derive"] }
toml = "0.9.6"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
assert_fs = "1.1.3"

[[bin]]
name = "trait-winnower"
path = "src/bin/trait-winnower.rs"