[package]
name = "trait-winnower"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
anyhow = "1.0.99"
ignore = "0.4.23"
serde = { version = "1.0.225", features = ["derive"] }
toml = "0.9.6"
globset = "0.4.16"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
colored = "3.0.0"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
prettyplease = "0.2.37"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
assert_fs = "1.1.3"

[[bin]]
name = "trait-winnower"
path = "src/bin/trait-winnower.rs"
